# innovo_claude

./: .gitignore  AGENTS.md  CLAUDE.md  CODEBASE_OVERVIEW.md  DEVELOPMENT_RULES.md  HOW_IT_ALL_WORKS.md  PRODUCT_REQUIREMENTS.md  README.md  SYSTEM_ARCHITECTURE.md  TECHNICAL_REFERENCE.md  UX_IMPROVEMENTS.md  package-lock.json  package.json
backend/: .dockerignore  Dockerfile  README.md  build.sh  fix_venv_permissions.sh  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  0fb7cad86248_add_company_profile_extraction_fields.py  1bdfd9e377ca_initial_schema.py  378640cd9ae5_add_headings_confirmed_to_documents.py  5118cacae937_add_template_fields_and_constraints.py  55cd193493bc_add_phase_2_5_template_system.py  8a8eb899811f_add_missing_guidelines_columns.py  94fe78de25e3_add_funding_program_scraping_fields.py  a1b2c3d4e5f6_add_funding_program_documents.py  a2b3c4d5e6f7_allow_multiple_docs_per_company_program.py  a2c163c6a76c_merge_phase2_heads.py  a3b4c5d6e7f8_add_projects_v2.py  add_files_table.py  (+15 more)
backend/app/: audio_compression.py  database.py  dependencies.py  document_extraction.py  extraction.py  file_storage.py  funding_program_documents.py  guidelines_processing.py  jwt_utils.py  models.py  observability.py  posthog_client.py  preprocessing.py  processing_cache.py  schemas.py  style_extraction.py  template_resolver.py  text_cleaning.py  utils.py  website_scraping.py
backend/innovo_backend/: main.py
backend/scripts/: seed_e2e.py
backend/static/: index.html
backend/tests/: conftest.py  test_admin_guard.py
(+150 files in other folders)
